PaC/CEL/k8s_native-{{CEL}}/3.CEL-ValidatingAdmissionPolicy-NoReplicasLess3.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: celvalidatingadmissionpolicynoreplicasless3
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["*"]
      resources: ["deployments"]
  validations:
    - expression: "!has(object.spec.replicas) || 
                   object.spec.replicas > 2"
      message: "Replicas is not allowed less than 3"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: celvalidatingadmissionpolicynoreplicasless3-binding
spec:
  policyName: celvalidatingadmissionpolicynoreplicasless3
  validationActions: [Deny]
